# xiot

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  INSTALL  README  README.md  appveyor.yml  biicode.cmake  biicode.conf  format.sh  ignore.bii
contrib/expat/win32/lib/: libexpat.lib
contrib/xercesc/win64/lib/: xerces-c_3.lib  xerces-c_3D.lib
contrib/zlib/win32/lib/: zlib.lib
data/: 00_EmptyScene.x3d  00_EmptyScene.x3db  01_RedSphereBlueBox.wrl  01_RedSphereBlueBox.x3d  01_RedSphereBlueBox.x3db  02_Instancing.wrl  02_Instancing.x3db  03_PointSet.wrl  03_PointSet.x3d  03_PointSet_xj3d_conv.x3db  04_VTK_X3DTest.x3d  04_VTK_X3DTest.x3db  05_IndexedLineSet.x3d  06_Violin.x3d  06_Violin.x3db  07_VTK_EDF_Export.x3d  07_VTK_EDF_Export.x3db  08_IFS_large_EDF.wrl  08_IFS_large_EDF_xj3d_conv.x3db  08_IFS_large_EDF_xj3d_conv_fastest.x3db  10_IFS_wuerfel.wrl  10_IFS_wuerfel.x3d  10_IFS_wuerfel.x3db  violin.x3d
data/edf/: Background-skyColor-0.x3d  Box-size-0.x3d  Box-solid-0.x3d  Box-solid-1.x3d  Color-color-0.x3d  ColorInterpolator-0.x3d  Cone-solid-1.x3d  Coordinate-point-0.x3d  CoordinateInterpolator-0.x3d  Cylinder-solid-1.x3d  DEFUSE-0.x3d  DEFUSE-1.x3d  DirectionalLight-ambientIntensity-0.x3d  DirectionalLight-color-0.x3d  DirectionalLight-direction-0.x3d  DirectionalLight-enabled-0.x3d  Group-bbox-0.x3d  ImageTexture-formats-0.x3d  ImageTexture-mapping-0.x3d  ImageTexture-mapping-1.x3d  IndexedFaceSet-creaseAngle-0.x3d  IndexedFaceSet-normalPerVertex-0.x3d  IndexedLineSet-0.x3d  IndexedTriangleFanSet-ccw-0.x3d  IndexedTriangleFanSet-ccw-1.x3d  IndexedTriangleFanSet-color-0.x3d  IndexedTriangleFanSet-normalPerVertex-0.x3d  IndexedTriangleFanSet-normalPerVertex-1.x3d  IndexedTriangleFanSet-solid-0.x3d  IndexedTriangleFanSet-solid-1.x3d  IndexedTriangleFanSet-texture-0.x3d  IndexedTriangleFanSet-texture-1.x3d  IndexedTriangleSet-ccw-0.x3d  IndexedTriangleSet-ccw-1.x3d  IndexedTriangleSet-color-0.x3d  IndexedTriangleSet-normalPerVertex-0.x3d  IndexedTriangleSet-normalPerVertex-1.x3d  IndexedTriangleSet-solid-0.x3d  IndexedTriangleSet-solid-1.x3d  IndexedTriangleSet-texture-0.x3d  (+72 more)
data/edf/invalid/: DEFUSE.x3d  unfinished.x3d
data/edf/pertinentSubset/: Cone-solid-0.x3d  Cylinder-solid-0.x3d  IndexedFaceSet-colorIndex-0.x3d  IndexedFaceSet-colorPerVertex-0.x3d  Normal-vector-0.x3d  TriangleSet-ccw-0.x3d  Viewpoint-fields-0.x3d  WorldInfo-info-0.x3d
data/vtk/: IFS_N1_C1_T1_crease.x3d  IFS_N1_C1_T1_nocrease.x3d  IFS_N1_C2_T1.x3d  IFS_N2_C1_T1.x3d  IFS_N2_C4_T1.x3d  IFS_N2_C4_T1_reuse.x3d  IFS_N3_C2_T1.x3d  IFS_N4_C1_T1.x3d  IFS_N5_C2_T1.x3d  IFS_N5_C3_T1.x3d  IFS_N5_C4_T1.x3d  IFS_N6_C1_T3.x3d  IFS_N6_C1_T3_ImageTexture.x3d  IFS_N6_C1_T3_ImageTexture_absolute_linux.x3d  IFS_N6_C1_T3_ImageTexture_absolute_win.x3d  IFS_N6_C1_T3_PixelTexture3.x3d  IFS_N6_C1_T3_textured.x3d  IFS_N6_C3_T3.x3d  IFS_N6_C5_T3.x3d  ILS_C1.x3d  ILS_C2.x3d  ILS_C3.x3d  ILS_C4.x3d  ILS_C5.x3d  IndexedLineSet-0.x3d  checkerboard.tif  loadFiles.sh
data/web3d/: AlarmClock.x3db  Chopper.x3db  ChopperBody.x3db  ChopperRotor.x3db  ClickToAnimate.x3db  ColorInterpolator.x3db  DirectionalLight.x3db  Elevator.x3db  ExecutionModel.x3db  ExtrusionFigureX3dSpecification.x3db  GeometricProperties.x3db  GuidedTour.x3db  LevelOfDetail.x3db  PointSet.x3db  Prototype.x3db  PrototypesPlus.x3db  RefractiveMaterial.x3db  Robot.x3db  Rotor.x3db  Scripting.x3db  ShuttlesAndPendulums.x3db  convert2X3D.sh
doc/: Training_EDF_20090310.tex
doc/tutorials/ogre/doc/: main.tex
doc/tutorials/ogre/src/: CMakeLists.txt
examples/: Argument_helper.cc  Argument_helper.cpp  Argument_helper.h  CMakeLists.txt  README  X3DTest.cxx  X3DTest.h  main.cxx  vtkX3DExporterGeneric.cxx  vtkX3DExporterGeneric.h  vtkX3DImporter.cpp  vtkX3DImporter.h  vtkX3DIndexedFaceSetSource.cpp  vtkX3DIndexedFaceSetSource.h  vtkX3DIndexedGeometrySource.cpp  vtkX3DIndexedGeometrySource.h  vtkX3DIndexedLineSetSource.cpp  vtkX3DIndexedLineSetSource.h  vtkX3DLoader.cpp  vtkX3DNodeHandler.cpp  vtkX3DNodeHandler.h  vtkX3DNodeHandler_ILS_1st_Approach.cpp  vtkX3DRewriter.cpp
include/xiot/: FIConfig.h  FIConstants.h  FIContentHandler.h  FIDecoder.h  FIEncoder.h  FIEncodingAlgorithms.h  FIParserVocabulary.h  FISAXParser.h  FITypes.h  X3DAttributes.h  X3DDataTypeFactory.h  X3DDefaultNodeHandler.h  X3DFIAttributes.h  X3DFICompressionTools.h  X3DFIEncoder.h  X3DFIEncodingAlgorithms.h  X3DFILoader.h  X3DLoader.h  X3DNodeHandler.h  X3DParseException.h  X3DParserVocabulary.h  X3DSwitch.h  X3DTypes.h  X3DWriter.h  X3DWriterFI.h  X3DWriterFIHelper.h  X3DWriterXML.h  X3DXMLAttributes.h  X3DXMLLoader.h  X3DZLibDataCompressor.h  XIOTConfig.h
integration/ParaView/: paraview_vtkxiot.patch
integration/ParaView/Servers/Filters/: vtkNetworkImageDataSource.cxx  vtkNetworkImageDataSource.h  (+2 more)
integration/ParaView/VTK/Utilities/vtkxiot/: CMakeLists.txt
integration/ParaView/VTK/Utilities/vtkxiot/include/xiot/: X3DFILoader.h  X3DXMLLoader.h
plugins/: CMakeLists.txt  X3DReader.xml  X3DReaderGUI.xml
src/: CMakeLists.txt  FIConstants.h  FIContentHandler.cpp  FIContentHandler.h  FIDecoder.cpp  FIDecoder.h  FIEncoder.cpp  FIEncodingAlgorithms.cpp  FIEncodingAlgorithms.h  FIParserVocabulary.cpp  FIParserVocabulary.h  FISAXParser.cpp  FISAXParser.h  FITypes.h  X3DAttributes.cpp  X3DAttributes.h  X3DDataTypeFactory.cpp  X3DDataTypeFactory.h  X3DDefaultNodeHandler.cpp  X3DDefaultNodeHandler.h  X3DFIAttributes.cpp  X3DFIAttributes.h  X3DFICompressionTools.cpp  X3DFICompressionTools.h  X3DFIEncoder.cpp  X3DFIEncodingAlgorithms.cpp  X3DFIEncodingAlgorithms.h  X3DFILoader.cpp  X3DFILoader.h  X3DLoader.cpp  X3DLoader.h  X3DLoaderConfigure.h  X3DNodeHandler.h  X3DParseException.cpp  X3DParseException.h  X3DParserVocabulary.cpp  X3DParserVocabulary.h  X3DSwitch.cpp  X3DSwitch.h  X3DTypes.cpp  (+20 more)
src/conf/: vtkCMakeLists.txt.in  vtkFIConfig.h  vtkFIConfig.h.in  vtkXIOTConfig.h.in
tests/: Argument_helper.h  CMakeLists.txt  IOTest.cpp  X3DLogNodeHandler.cpp  X3DLogNodeHandler.h  createEventLog.cpp  fitest.cpp  parserPerformance.cpp  shapeCounter.cpp  simpleTest.cpp  x3db2x3d.cpp
(+19 files in other folders)
